CppBridge/library.h

struct ModuleContext {
    asIScriptModule *module;
    asIScriptContext *context;

    std::string str{};
    bool flag1{};
    bool flag2{};
    bool flag3{};

    ModuleContext(asIScriptModule *module, asIScriptContext *context);
};
_declspec(dllexport) BBStr * _stdcall TL_Tool_Get_String(const char *str);
_declspec(dllexport) const char * _stdcall TL_Tool_String_Content(const BBStr * string);
_declspec(dllexport) void _stdcall TL_Tool_Return_String(const BBStr *string);
_declspec(dllexport) asSFuncPtr * _stdcall TL_Tool_Get_FuncPtr(void *func);
_declspec(dllexport) void _stdcall TL_Tool_Return_FuncPtr(const asSFuncPtr *funcPtr);
_declspec(dllexport) ModuleContext * __stdcall TL_Tool_Get_ModuleContext(asIScriptModule *module, asIScriptContext *context);
_declspec(dllexport) void __stdcall TL_Tool_Return_ModuleContext(const ModuleContext *moduleContext);
_declspec(dllexport) asCScriptFunction * __stdcall TL_Tool_RegisterFunctionToModule(asCModule *module, const char *declaration,
                                                               const asSFuncPtr *funcPointer, asDWORD callConv,
                                                               void *auxiliary);
_declspec(dllexport) asIScriptEngine * _stdcall TL_Engine_GetEngine();
_declspec(dllexport) int __stdcall TL_Engine_AddRef();
_declspec(dllexport) int __stdcall TL_Engine_Release();
_declspec(dllexport) int __stdcall TL_Engine_ShutDownAndRelease();
_declspec(dllexport) int __stdcall TL_Engine_SetEngineProperty(asEEngineProp property, asPWORD value);
_declspec(dllexport) int __stdcall TL_Engine_SetMessageCallback(const asSFuncPtr *callback, void *obj, asDWORD callConv);
_declspec(dllexport) int __stdcall TL_Engine_GetMessageCallback(asSFuncPtr *callback, void **obj, asDWORD *callConv);
_declspec(dllexport) int __stdcall TL_Engine_ClearMessageCallback();
_declspec(dllexport) int __stdcall TL_Engine_WriteMessage(const char *section, int row, int col, asEMsgType type, const char *message);
_declspec(dllexport) int __stdcall TL_Engine_SetJITCompiler(asIJITCompilerAbstract *compiler);
_declspec(dllexport) asIJITCompilerAbstract * __stdcall TL_Engine_GetJITCompiler();
_declspec(dllexport) int __stdcall TL_Engine_RegisterGlobalFunction(const char *declaration, const asSFuncPtr *funcPointer, asDWORD callConv,
                                               void *auxiliary);
_declspec(dllexport) asUINT __stdcall TL_Engine_GetGlobalFunctionCount();
_declspec(dllexport) asIScriptFunction * __stdcall TL_Engine_GetGlobalFunctionByIndex(asUINT index);
_declspec(dllexport) asIScriptFunction * __stdcall TL_Engine_GetGlobalFunctionByDecl(const char *declaration);
_declspec(dllexport) int __stdcall TL_Engine_RegisterGlobalProperty(const char *declaration, void *pointer);
_declspec(dllexport) asUINT __stdcall TL_Engine_GetGlobalPropertyCount();
_declspec(dllexport) int __stdcall TL_Engine_GetGlobalPropertyByIndex(asUINT index, const char **name, const char **nameSpace, int *typeId,
                                                 bool *isConst, const char **configGroup, void **pointer,
                                                 asDWORD *accessMask);
_declspec(dllexport) int __stdcall TL_Engine_GetGlobalPropertyIndexByName(const char *name);
_declspec(dllexport) int __stdcall TL_Engine_GetGlobalPropertyIndexByDecl(const char *decl);
_declspec(dllexport) int __stdcall TL_Engine_RegisterObjectType(const char *obj, int byteSize, asQWORD flags);
_declspec(dllexport) int __stdcall TL_Engine_RegisterObjectProperty(const char *obj, const char *declaration, int byteOffset,
                                               int compositeOffset, bool isCompositeIndirect);
_declspec(dllexport) int __stdcall TL_Engine_RegisterObjectMethod(const char *obj, const char *declaration, const asSFuncPtr *funcPointer,
                                             asDWORD callConv, void *auxiliary, int compositeOffset,
                                             bool isCompositeIndirect);
_declspec(dllexport) int __stdcall TL_Engine_RegisterObjectBehaviour(const char *obj, asEBehaviours behaviour, const char *declaration,
                                                const asSFuncPtr *funcPointer, asDWORD callConv, void *auxiliary,
                                                int compositeOffset, bool isCompositeIndirect);
_declspec(dllexport) int __stdcall TL_Engine_RegisterInterface(const char *name);
_declspec(dllexport) int __stdcall TL_Engine_RegisterInterfaceMethod(const char *intf, const char *declaration);
_declspec(dllexport) asUINT __stdcall TL_Engine_GetObjectTypeCount();
_declspec(dllexport) asITypeInfo * __stdcall TL_Engine_GetObjectTypeByIndex(asUINT index);
_declspec(dllexport) int __stdcall TL_Engine_RegisterStringFactory(const char *datatype, asIStringFactory *factory);
_declspec(dllexport) int __stdcall TL_Engine_GetStringFactory(asDWORD *typeModifiers, asIStringFactory **factory);
_declspec(dllexport) int __stdcall TL_Engine_RegisterDefaultArrayType(const char *type);
_declspec(dllexport) int __stdcall TL_Engine_GetDefaultArrayTypeId();
_declspec(dllexport) int __stdcall TL_Engine_RegisterEnum(const char *type);
_declspec(dllexport) int __stdcall TL_Engine_RegisterEnumValue(const char *type, const char *name, int value);
_declspec(dllexport) asUINT __stdcall TL_Engine_GetEnumCount();
_declspec(dllexport) asITypeInfo * __stdcall TL_Engine_GetEnumByIndex(asUINT index);
_declspec(dllexport) int __stdcall TL_Engine_RegisterFuncdef(const char *decl);
_declspec(dllexport) asUINT __stdcall TL_Engine_GetFuncdefCount();
_declspec(dllexport) asITypeInfo * __stdcall TL_Engine_GetFuncdefByIndex(asUINT index);
_declspec(dllexport) int __stdcall TL_Engine_RegisterTypedef(const char *type, const char *decl);
_declspec(dllexport) asUINT __stdcall TL_Engine_GetTypedefCount();
_declspec(dllexport) asITypeInfo * __stdcall TL_Engine_GetTypedefByIndex(asUINT index);
_declspec(dllexport) int __stdcall TL_Engine_BeginConfigGroup(const char *groupName);
_declspec(dllexport) int __stdcall TL_Engine_EndConfigGroup();
_declspec(dllexport) int __stdcall TL_Engine_RemoveConfigGroup(const char *groupName);
_declspec(dllexport) asDWORD __stdcall TL_Engine_SetDefaultAccessMask(asDWORD defaultMask);
_declspec(dllexport) int __stdcall TL_Engine_SetDefaultNamespace(const char *nameSpace);
_declspec(dllexport) const char * __stdcall TL_Engine_GetDefaultNamespace();
_declspec(dllexport) asIScriptModule * __stdcall TL_Engine_GetModule(const char *module, asEGMFlags flag);
_declspec(dllexport) int __stdcall TL_Engine_DiscardModule(const char *module);
_declspec(dllexport) asUINT __stdcall TL_Engine_GetModuleCount();
_declspec(dllexport) asIScriptModule * __stdcall TL_Engine_GetModuleByIndex(asUINT index);