CsharpLoader/ACL/Private/NativeBindings.cs

namespace ACL.Private;

using System.Runtime.InteropServices;

internal static partial class NativeBindings
{
    private const string DllName = "ACL.dll";

    #region Tool Functions

    [LibraryImport(DllName, EntryPoint = "TL_Tool_Get_String")]
    internal static partial IntPtr TL_Tool_Get_String(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string str);

    [LibraryImport(DllName, EntryPoint = "TL_Tool_String_Content")]
    [return: MarshalAs(UnmanagedType.LPUTF8Str)]
    internal static partial string TL_Tool_String_Content(IntPtr stringPtr);

    [LibraryImport(DllName, EntryPoint = "TL_Tool_Return_String")]
    internal static partial void TL_Tool_Return_String(IntPtr stringPtr);

    [LibraryImport(DllName, EntryPoint = "TL_Tool_Get_FuncPtr")]
    internal static partial IntPtr TL_Tool_Get_FuncPtr(IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Tool_Return_FuncPtr")]
    internal static partial void TL_Tool_Return_FuncPtr(IntPtr funcPtr);

    [LibraryImport(DllName, EntryPoint = "TL_Tool_Get_ModuleContext")]
    internal static partial IntPtr TL_Tool_Get_ModuleContext(IntPtr module, IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Tool_Return_ModuleContext")]
    internal static partial void TL_Tool_Return_ModuleContext(IntPtr moduleContext);

    [LibraryImport(DllName, EntryPoint = "TL_Tool_RegisterFunctionToModule")]
    internal static partial IntPtr TL_Tool_RegisterFunctionToModule(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string declaration,
        IntPtr funcPointer,
        uint callConv,
        IntPtr auxiliary);

    #endregion

    #region Engine Functions

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetEngine")]
    internal static partial IntPtr TL_Engine_GetEngine();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_AddRef")]
    internal static partial int TL_Engine_AddRef();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_Release")]
    internal static partial int TL_Engine_Release();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_ShutDownAndRelease")]
    internal static partial int TL_Engine_ShutDownAndRelease();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetEngineProperty")]
    internal static partial int TL_Engine_SetEngineProperty(int property, IntPtr value);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetMessageCallback")]
    internal static partial int TL_Engine_SetMessageCallback(
        IntPtr callback,
        IntPtr obj,
        uint callConv);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetMessageCallback")]
    internal static partial int TL_Engine_GetMessageCallback(
        IntPtr callback,
        IntPtr obj,
        IntPtr callConv);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_ClearMessageCallback")]
    internal static partial int TL_Engine_ClearMessageCallback();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_WriteMessage")]
    internal static partial int TL_Engine_WriteMessage(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string section,
        int row,
        int col,
        int type,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string message);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetJITCompiler")]
    internal static partial int TL_Engine_SetJITCompiler(IntPtr compiler);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetJITCompiler")]
    internal static partial IntPtr TL_Engine_GetJITCompiler();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterGlobalFunction")]
    internal static partial int TL_Engine_RegisterGlobalFunction(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string declaration,
        IntPtr funcPointer,
        uint callConv,
        IntPtr auxiliary);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetGlobalFunctionCount")]
    internal static partial uint TL_Engine_GetGlobalFunctionCount();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetGlobalFunctionByIndex")]
    internal static partial IntPtr TL_Engine_GetGlobalFunctionByIndex(uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetGlobalFunctionByDecl")]
    internal static partial IntPtr TL_Engine_GetGlobalFunctionByDecl(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string declaration);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterGlobalProperty")]
    internal static partial int TL_Engine_RegisterGlobalProperty(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string declaration,
        IntPtr pointer);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetGlobalPropertyCount")]
    internal static partial uint TL_Engine_GetGlobalPropertyCount();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetGlobalPropertyByIndex")]
    internal static partial int TL_Engine_GetGlobalPropertyByIndex(
        uint index,
        out IntPtr name,
        out IntPtr nameSpace,
        out int typeId,
        [MarshalAs(UnmanagedType.Bool)] out bool isConst,
        out IntPtr configGroup,
        out IntPtr pointer,
        out int accessMask);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetGlobalPropertyIndexByName")]
    internal static partial int TL_Engine_GetGlobalPropertyIndexByName(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetGlobalPropertyIndexByDecl")]
    internal static partial int TL_Engine_GetGlobalPropertyIndexByDecl(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterObjectType")]
    internal static partial int TL_Engine_RegisterObjectType(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string obj,
        int byteSize,
        ulong flags);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterObjectProperty")]
    internal static partial int TL_Engine_RegisterObjectProperty(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string obj,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string declaration,
        int byteOffset,
        int compositeOffset,
        [MarshalAs(UnmanagedType.Bool)] bool isCompositeIndirect);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterObjectMethod")]
    internal static partial int TL_Engine_RegisterObjectMethod(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string obj,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string declaration,
        IntPtr funcPointer,
        uint callConv,
        IntPtr auxiliary,
        int compositeOffset,
        [MarshalAs(UnmanagedType.Bool)] bool isCompositeIndirect);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterObjectBehaviour")]
    internal static partial int TL_Engine_RegisterObjectBehaviour(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string obj,
        int behaviour,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string declaration,
        IntPtr funcPointer,
        uint callConv,
        IntPtr auxiliary,
        int compositeOffset,
        [MarshalAs(UnmanagedType.Bool)] bool isCompositeIndirect);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterInterface")]
    internal static partial int TL_Engine_RegisterInterface(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterInterfaceMethod")]
    internal static partial int TL_Engine_RegisterInterfaceMethod(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string intf,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string declaration);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetObjectTypeCount")]
    internal static partial uint TL_Engine_GetObjectTypeCount();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetObjectTypeByIndex")]
    internal static partial IntPtr TL_Engine_GetObjectTypeByIndex(uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterStringFactory")]
    internal static partial int TL_Engine_RegisterStringFactory(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string datatype,
        IntPtr factory);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetStringFactory")]
    internal static partial int TL_Engine_GetStringFactory(
        IntPtr typeModifiers,
        IntPtr factory);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterDefaultArrayType")]
    internal static partial int TL_Engine_RegisterDefaultArrayType(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetDefaultArrayTypeId")]
    internal static partial int TL_Engine_GetDefaultArrayTypeId();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterEnum")]
    internal static partial int TL_Engine_RegisterEnum(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string type);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterEnumValue")]
    internal static partial int TL_Engine_RegisterEnumValue(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string type,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        int value);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetEnumCount")]
    internal static partial uint TL_Engine_GetEnumCount();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetEnumByIndex")]
    internal static partial IntPtr TL_Engine_GetEnumByIndex(uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterFuncdef")]
    internal static partial int TL_Engine_RegisterFuncdef(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetFuncdefCount")]
    internal static partial uint TL_Engine_GetFuncdefCount();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetFuncdefByIndex")]
    internal static partial IntPtr TL_Engine_GetFuncdefByIndex(uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RegisterTypedef")]
    internal static partial int TL_Engine_RegisterTypedef(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string type,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetTypedefCount")]
    internal static partial uint TL_Engine_GetTypedefCount();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetTypedefByIndex")]
    internal static partial IntPtr TL_Engine_GetTypedefByIndex(uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_BeginConfigGroup")]
    internal static partial int TL_Engine_BeginConfigGroup(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string groupName);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_EndConfigGroup")]
    internal static partial int TL_Engine_EndConfigGroup();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_RemoveConfigGroup")]
    internal static partial int TL_Engine_RemoveConfigGroup(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string groupName);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetDefaultAccessMask")]
    internal static partial uint TL_Engine_SetDefaultAccessMask(uint defaultMask);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_SetDefaultNamespace")]
    internal static partial int TL_Engine_SetDefaultNamespace(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string nameSpace);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetDefaultNamespace")]
    internal static partial IntPtr TL_Engine_GetDefaultNamespace();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetModule")]
    internal static partial IntPtr TL_Engine_GetModule(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string module,
        int flag);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_DiscardModule")]
    internal static partial int TL_Engine_DiscardModule(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string module);

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetModuleCount")]
    internal static partial uint TL_Engine_GetModuleCount();

    [LibraryImport(DllName, EntryPoint = "TL_Engine_GetModuleByIndex")]
    internal static partial IntPtr TL_Engine_GetModuleByIndex(uint index);
